# playground-wgpu

./: .gitignore  LICENSE.md  README.md
exploration/: README.md
exploration/interactivity_wgpu/src/: lib.rs
exploration/simple_start_ash/: Cargo.toml
exploration/simple_start_ash/.zed/: settings.json
exploration/simple_start_ash/src/: lib.rs
exploration/simple_start_vulkano/: Cargo.toml
exploration/simple_start_vulkano/src/: lib.rs
interactivity/: Cargo.toml  build.rs
interactivity/src/: lib.rs  main.rs
render_engine/: Cargo.toml  build.rs
render_engine/src/: context.rs  lib.rs  lights.rs  mesh.rs  orbit_camera.rs  scene.rs  shader_common.slang  shader_common.wgsl  slang_size_check.rs  slang_size_check.slang  slang_util.rs  target.rs  view.rs  visualiser.rs  wgpu_util.rs
render_engine/src/fragment/: mesh_object_textured.rs  mod.rs  shader.wgsl
render_engine/src/loader/: mod.rs
render_engine/src/render/: mesh_object_textured.rs  mod.rs  shader.slang  shader.wgsl
render_engine/src/texture/: mod.rs
render_engine/src/vertex/: mesh.rs  mesh_object.rs  mesh_object.slang  mesh_object.wgsl  mikktspace.rs  (+1 more)
render_engine/tests/: test_damaged_helmet_pbr.rs
simple_start/: Cargo.toml
simple_start/src/: lib.rs
simple_start_ash/: Cargo.toml  build.rs
simple_start_ash/src/: lib.rs  pyroclastic.rs  shader_util.rs
simple_start_vulkano/: Cargo.toml
simple_start_vulkano/src/: lib.rs  vulkano_util.rs
simple_start_wgpu/: Cargo.toml
simple_start_wgpu/src/: lib.rs
triangle_image/: Cargo.toml
triangle_image/src/: lib.rs  main.rs  shader.wgsl
(+3 files in other folders)
